--- a/src/App.scss
+++ b/src/App.scss
@@ -1,24 +1,22 @@
-.App {
-  text-align: center;
+@import 'globals';
+
+@include react-md-everything;
+@include host-material-icons('../node_modules/material-design-icons/iconfont/');
+
+body {
+  margin: 0;
+  padding: 0;
+  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",Helvetica,Arial,sans-serif;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
-}
-
-.App-header {
+.sub-header {
   background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
-}
+  padding: 10px;
+  text-align: center;
 
-.App-intro {
-  font-size: large;
-}
-
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+  h2 {
+    margin: 0;
+    font-weight: 200;
+    color: white;
+  }
 }
